[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanohub-qe"
dynamic = ["version"]
description = "Python tools for building Quantum ESPRESSO input decks, running calculations, and visualizing outputs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "nanoHUB QE Contributors" }
]
keywords = ["quantum-espresso", "materials-science", "simulation", "nanoHUB"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "matplotlib>=3.7",
  "plotly>=5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
docs = [
  "sphinx>=8.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nanohubqe*"]

[tool.setuptools.dynamic]
version = {attr = "nanohubqe._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
